2002-10-31  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* text-coding.c (char_encode_as_entity_reference): Modify for
	`charset_code_point'.
	(char_encode_shift_jis): Likewise.
	(char_encode_big5): Likewise.
	(char_encode_utf8): Likewise.
	(char_encode_iso2022): Likewise.

	* mule-charset.c (charset_code_point): Add new argument
	`defined_only'.
	(Fencode_char): Add new optional argument `defined_only'.

	* chartab.c (put_char_table): Modify for `charset_code_point'.

	* char-ucs.h (charset_code_point): Add new argument
	`defined_only'.
	(encode_char_1): Modify for `charset_code_point'.

2002-10-30  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (complex_vars_of_mule_charset): Don't specify
	`MIN_CHAR_THAI' and `MAX_CHAR_THAI' for `thai-tis620'.

2002-10-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule-charset.c (Vcharset_jis_x0208): New variable in UTF-2000.
	(Qjis_x0208): Likewise.
	(decode_builtin_char): Prefer XCHARSET_MAX_CODE(charset) than
	XCHARSET_FINAL(charset).
	(charset_code_point): Modify condition for final-byte based
	builtin-chars.
	(syms_of_mule_charset): Add new symbol `=jis-x0208' in UTF-2000.
	(complex_vars_of_mule_charset): Add new coded-charset `=jis-x0208'
	in UTF-2000; specify `=jis-x0208' as the mother of
	`japanese-jisx0208-1978', `japanese-jisx0208' and
	`japanese-jisx0208-1990' in UTF-2000.

2002-10-27  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* char-ucs.h (LEADING_BYTE_JIS_X0208): New macro.

2002-10-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* text-coding.c (decode_coding_utf16): Support UTF-16.
	(char_encode_utf16): Fixed.

2002-10-03  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* text-coding.c (Qutf16): New variable in MULE.
	(Fmake_coding_system): Accept `utf-16' as `type' in MULE.
	(Fcoding_system_type): Add `utf-16' in MULE.
	(struct detection_state): Add a structure for utf16 in MULE.
	(detect_coding_type): Setup st->utf16.mask in MULE.